# aka-space-fediverse

./: apm-server.yml  compose.build.yaml  compose.yaml  otel-collector-config.yaml  otel-collector-config.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-03e6e033ca686b9d93ce4a82775263e49dcca9c17abf864fc55aad5a919f7d8b.json  query-06b6412b4a46923805b177b274c636834dbd4014877584fd1ed63b65130c5c14.json  query-1bc8843951e30d3d9c35b95f379163cf850d108f74a485a4a22bfa8fe8ed6da0.json  query-20db6ea2df4c3e910f23fa15c34192c4da0eee18f01264354ccb1218b67f3d7f.json  query-220be5e5ad94e4782bfe2be26d416b779caf29550a9e749e4c20d66d34fca5ad.json  query-27720b10cc34c12e3fa4fa33c56d9f7e1de09f00702c6105a7f8f8907c0c0790.json  query-2e42586eec8cb76074fb4a5dc7e1adf03fca5c6d595287e8f199bee9ccbcb856.json  query-32558c51662e29af7af0145edae90fcdc688e11b8659c775617d7bea555c96d8.json  query-3277621e89df43ff4538a3023970a9b7a7be672fc658aab4173f1bb9d8d22723.json  query-339d6c78c1bdaf8e7d6af9f332c67246b30a1b5f81e225335d2d9c0543c8bd4b.json  query-33c2fe46b061a02111e858517b130d6b7e2a39bbc62c7cddbe0c35991419b9ca.json  query-396f7e600ea565f43986b2b988f460f384b382d113c923a8130828a9cd2e21df.json  query-4c35a4fce7370e20e3b9224ce79508fa1801d46ffefbdba7babb204bda5f45f6.json  query-5c2fc41eacfdd1332b5ab21241136788a403f7595dff0e278f034138b17fcc2d.json  query-619bea1cb2e84257cad9ec51240254daa92a9dd424acb6cf15969838e15b3d2f.json  query-67801457d5231b8a65d53ba384730a1e17c620879443499d7b4184263d7ad8ae.json  query-68b9357f00571a080cec5901230a1ed6ecb54779ee9d77979cb04a0eefb10fac.json  query-698ebc0a60ab7dc632afa67cf46429760ae5f624ee299f272ffeee3d157e0a80.json  query-6a62648e4067c363d96a7bb0ecc7246a98fe5c7bb1bced8985d9012f24e5a8c0.json  query-73eb219c07601cffd4c716697c05ac12eb9d3d756314a7757aee6f7ba0234843.json  query-843aded557ff468678e94124035f27c736b2f3ba392b404589f539637593f9a8.json  query-86753e56e84ed101e5b5a8ce3db8f280d28951e1f2bf27717da915ef5fb5fbb4.json  query-8c181562d2aad5e5df348b743fa432cbb2c8c2ee21cb36b01c7d1aea749af747.json  query-9083e141e3d14bbf8fa16788b61cab6759b7af3696c1a7850edd2bcbdcd34b3f.json  query-98140f07c3dc0afe7cb9b0c84261480c4316356f1ca73a4716de7094ef8f0cd5.json  query-b4ce5a5fba221001b14250ef9f30c70f9680ba1efb2c62b953d9ff8f5d28890e.json  query-b966416df6303dcff5c63df31dc204bf027518c1d145b53f94bca07d907403d8.json  query-b97edf35d531dbfb1462bac7488aa8ff65f567b654c1cf32400fab2108886594.json  query-c305bff5779e8943d7ba97a573a2f3327cf9077cd048a22cd013a61ca9c8a31b.json  query-c612ce6387033a662761eccd56941874f9f4a18659d539ed1d437de13ec6f6ea.json  query-cdb38e14a29b29b6b93faad2e69e06dd67c393854a710171c1e0ac0c2dfad508.json  query-d742a806b4e85ac694ccfdc69af2ac5eff9826c98d365bcbe63d59b94887abcb.json  query-e32f482f604771ca85a09ee20a70a61ab13366d7b0248395b7205b98f9ae80e1.json  query-e763719d161e71162232b82011ad7d503d830ad73eed314c8e0bf5b1ea065386.json  query-eb0ef75a409a2f2c8ca6cea3ee95d5772dcf93efa46b8d0b2ee29c6ced38b537.json  query-ebdcb237d311192488f8211697f3d0961c97f904fd8425ab49ff5b180efe7cc4.json  query-f17dbdcc631b54513d96f23974548b0403432852680aa13c5d4975443c4c448c.json  query-f18ced8496f31f7e7b675e476d7d1cc7b3f6d2571586416cfcbf1e0ee608ff54.json  query-f33fba1aacbce966644f78d7ca4fc4e670aebf2ec52cdaeaf4a21f54ac4b4f45.json  query-f7c8ca2e057f51905e7345c354642c0cca44098d837d2888994ad78212c6749e.json
backend/crates/broadcast/: Cargo.toml
backend/crates/cookie/: Cargo.toml
backend/crates/cors/: Cargo.toml
backend/crates/json-web-token/: Cargo.toml
backend/crates/middleware/: Cargo.toml
backend/crates/oidc/: Cargo.toml
backend/migrations/: 20251028034206_init.down.sql  20251028034206_init.up.sql  20251030020059_add_post.down.sql  20251030020059_add_post.up.sql  20251030042939_add_slugify_function.down.sql  20251030042939_add_slugify_function.up.sql  20251202093711_add_comment_reaction.down.sql  20251202093711_add_comment_reaction.up.sql  20251202165348_add_comment_tree.down.sql  20251202165348_add_comment_tree.up.sql  20251203022921_add_account_avatar.down.sql  20251203022921_add_account_avatar.up.sql
backend/services/account/: Cargo.toml
backend/services/auth/: Cargo.toml
backend/src/: constant.rs  doc.rs  error.rs  main.rs  state.rs  trace.rs
backend/src/config/: bcrypt.rs  cors.rs  jwt.rs  mod.rs  oauth2.rs  redis.rs  s3.rs  session.rs
backend/src/controller/: mod.rs
(+247 files in other folders)
