[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie", "query", "typed-header"] }
axum-tracing-opentelemetry = { version = "0.32.2", features = ["tracing_level_info"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
color-eyre = "0.6.5"
config = { version = "0.15.18", default-features = false }
dashmap = "6.1.0"
init-tracing-opentelemetry = { version = "0.34.0", features = ["otlp", "tracing_subscriber_ext", "metrics"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
openidconnect = "4.0.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
redis = { version = "0.32.7", features = ["tokio-comp", "tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
sqlx-conditional-queries = { version = "0.3.2", features = ["postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "chrono", "env-filter"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
