[package]
name = "json-web-token"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
