[package]
name = "account"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bon = "3.8.1"
broadcast = { version = "0.1.0", path = "../../crates/broadcast" }
config = { version = "0.15.18", default-features = false }
cors = { version = "0.1.0", path = "../../crates/cors" }
json-web-token = { version = "0.1.0", path = "../../crates/json-web-token" }
lapin = "3.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "chrono", "env-filter"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
